# account_os_account

./: .gitignore  AGENTS.md  BUILD.gn  CLAUDE.md  CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  cfi_blocklist.txt  hisysevent.yaml  ohos.build  os_account.gni
frameworks/account_iam/: BUILD.gn  IAccountIAM.idl  IGetCredInfoCallback.idl  IGetEnrolledIdCallback.idl  IGetSetPropCallback.idl  IIDMCallback.idl  IPreRemoteAuthCallback.idl
frameworks/account_iam/include/: account_iam_info_parse.h
frameworks/account_iam/src/: account_iam_callback.cpp  account_iam_callback_proxy.cpp  account_iam_callback_service.cpp  account_iam_callback_stub.cpp  account_iam_client.cpp  account_iam_info.cpp  account_iam_mgr_proxy.cpp  account_iam_proxy.cpp
frameworks/account_iam/test/: BUILD.gn
frameworks/appaccount/cj/: BUILD.gn
frameworks/appaccount/core/: BUILD.gn
frameworks/appaccount/extension/: BUILD.gn
frameworks/appaccount/native/: BUILD.gn  IAppAccount.idl  IAppAccountAuthenticator.idl  IAppAccountAuthenticatorCallback.idl  IAppAccountAuthorizationExtension.idl  IAppAccountAuthorizationExtensionCallback.idl  IAppAccountEvent.idl  libapp_account_innerkits.map
frameworks/authorization/: BUILD.gn  IAdminAuthorizationCallback.idl  IAuthRemoteObject.idl  IAuthorization.idl  IAuthorizationCallback.idl  IConnectAbilityCallback.idl
frameworks/authorization/include/: admin_authorization_callback_service.h  authorization_callback_service.h
frameworks/authorization/src/: authorization_callback_service.cpp  authorization_client.cpp  authorization_common.cpp
frameworks/cj/distributed_account/: BUILD.gn
frameworks/common/: BUILD.gn
frameworks/common/account_posix_adapter/: BUILD.gn
frameworks/common/include/: accountmgr_service_ipc_interface_code.h
frameworks/common/privileges/: privileges_definition_parser.py
frameworks/common/test/: BUILD.gn
frameworks/domain_account/: BUILD.gn  DomainAccountIpcData.idl  IDomainAccount.idl  IDomainAccountCallback.idl  IDomainAccountPlugin.idl
frameworks/domain_account/include/: domain_account_callback_adapters.h  domain_account_callback_client.h  domain_account_callback_proxy.h  domain_account_callback_service.h  domain_account_callback_stub.h  domain_account_parcel.h  domain_account_plugin_service.h  domain_account_plugin_stub.h  domain_account_proxy.h  domain_account_status_listener_manager.h  domain_account_status_listener_service.h  domain_auth_callback_client.h  domain_auth_callback_proxy.h  domain_auth_callback_service.h  domain_auth_callback_stub.h  idomain_account.h  idomain_account_callback.h  idomain_account_plugin.h  idomain_auth_callback.h
frameworks/domain_account/src/: domain_account_callback_adapters.cpp  domain_account_callback_client.cpp  domain_account_callback_proxy.cpp  domain_account_callback_service.cpp  domain_account_callback_stub.cpp  domain_account_client.cpp  domain_account_common.cpp  domain_account_parcel.cpp  domain_account_plugin_service.cpp  domain_account_plugin_stub.cpp  domain_account_proxy.cpp  domain_account_status_listener_manager.cpp  domain_account_status_listener_service.cpp  domain_auth_callback_client.cpp  domain_auth_callback_proxy.cpp  domain_auth_callback_service.cpp  domain_auth_callback_stub.cpp
frameworks/ets/taihe/: BUILD.gn
frameworks/ohosaccount/native/: BUILD.gn  IAccount.idl  IDistributedAccountEvent.idl  cfi_blocklist.txt  libohos_account_innerkits.map
frameworks/os_account_subspace/: BUILD.gn  IOsAccountSubProfile.idl  IOsAccountSubProfileEvent.idl  IOsAccountSubspace.idl
frameworks/os_account_subspace/include/: os_account_sub_profile_event_service.h
frameworks/os_account_subspace/src/: os_account_sub_profile_event_service.cpp  os_account_sub_profile_subscribe_callback.cpp  os_account_subspace_client.cpp
frameworks/osaccount/core/: BUILD.gn  IOsAccountConstraintEvent.idl  libos_account_core.map
frameworks/osaccount/native/: BUILD.gn  IOsAccount.idl  IOsAccountEvent.idl  IOsAccountStateReplyCallback.idl  libos_account_innerkits.map  libos_account_innerkits_lite.map
frameworks/test/unittest/: BUILD.gn  account_appaccount_proxy_mock_test.cpp  account_iam_proxy_mock_test.cpp  account_ohosaccount_proxy_mock_test.cpp  account_os_account_manager_lite_proxy_mock_test.cpp  account_osaccount_proxy_mock_test.cpp
interfaces/innerkits/accountmgr/: BUILD.gn
services/accountmgr/: BUILD.gn  account_cfi_blocklist.txt  accountmgr.cfg  accountmgr.rc  accountmgr_sys.cfg  app_account.json  constraints_list_collection.json  libaccountmgr.map  os_account_config.json  os_account_constraint_config.json  os_account_constraint_definition.json  os_account_service.gni  osaccount_constraints.json
services/accountmgr/authorization_manager/: BUILD.gn
services/accountmgr/include/: account_bundle_manager.h  account_data_storage.h  account_dump_helper.h  account_event_provider.h  account_event_subscribe.h  account_file_operator.h  account_file_watcher_manager.h  account_helper_data.h  account_info_report.h  account_kvstore_death_recipient_callback.h  account_mgr_service.h  account_permission_manager.h  account_proxy.h  account_state_action.h  account_state_machine.h  account_stub.h  distributed_account_subscribe_death_recipient.h  distributed_account_subscribe_manager.h  iaccount_context.h  idistributed_account_subscribe.h  ohos_account_data_deal.h  ohos_account_manager.h  os_account_sub_profile_id_counter.h  os_account_subspace_data_deal.h  os_account_subspace_manager.h
services/accountmgr/param/: BUILD.gn  account.para  account.para.dac
services/accountmgr/src/: account_bundle_manager.cpp  account_data_storage.cpp  account_dump_helper.cpp  account_event_provider.cpp  account_event_subscribe.cpp  account_file_operator.cpp  account_file_watcher_manager.cpp  account_helper_data.cpp  account_info_report.cpp  account_kvstore_death_recipient_callback.cpp  account_mgr_service.cpp  account_stub.cpp  (+7 more)
services/domain_account_mgr/: BUILD.gn  domain_account_mgr.cfg  domain_account_mgr.rc
test/common/: BUILD.gn
tools/acm/: BUILD.gn
tools/ohos-acm/: BUILD.gn  ohos-acm.json
(+2249 files in other folders)
