# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/access_token/access_token.gni")
import("//build/ohos.gni")

group("account_build_unittest") {
  testonly = true
  deps = []
  deps += [
    "//base/account/os_account/frameworks/account_iam/test:unittest",
    "//base/account/os_account/frameworks/appaccount/native/test:unittest",
    "//base/account/os_account/frameworks/common/test:unittest",
    "//base/account/os_account/frameworks/osaccount/core/test:unittest",
    "//base/account/os_account/frameworks/osaccount/native/test/benchmarktest:benchmarktest",
    "//base/account/os_account/frameworks/osaccount/native/test/unittest:unittest",
    "//base/account/os_account/frameworks/test/unittest:unittest",
    "//base/account/os_account/services/accountmgr/test:unittest",
    "//base/account/os_account/test/systemtest:systemtest",
    "//base/account/os_account/tools:unittest",
  ]
}

group("account_build_moduletest") {
  testonly = true
  deps = []
  deps += [
    "//base/account/os_account/frameworks/appaccount/native/test:moduletest",
    "//base/account/os_account/frameworks/domain_account/test/moduletest:moduletest",
    "//base/account/os_account/frameworks/ohosaccount/test:moduletest",
    "//base/account/os_account/frameworks/osaccount/native/test/moduletest:moduletest",
    "//base/account/os_account/services/accountmgr/test/moduletest/app_account:moduletest",
    "//base/account/os_account/services/accountmgr/test/moduletest/os_account:moduletest",
    "//base/account/os_account/tools:moduletest",
  ]
}

group("account_build_fuzztest") {
  testonly = true
  deps = []
  deps += [
    "//base/account/os_account/test/fuzztest/appaccount:fuzztest",
    "//base/account/os_account/test/fuzztest/iamaccount:fuzztest",
    "//base/account/os_account/test/fuzztest/ohosaccount:fuzztest",
    "//base/account/os_account/test/fuzztest/osaccount:fuzztest",
  ]
}
