# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

os_account_path = "//base/account/os_account"
aafwk_path = "//foundation/aafwk/standard"
common_path = "${os_account_path}/frameworks/common"
services_path = "${os_account_path}/services"
tools_path = "${os_account_path}/tools"
innerkits_path = "${os_account_path}/interfaces/innerkits/ohosaccount/native"
innerkits_native_path = "${os_account_path}/frameworks/ohosaccount/native"

app_account_core_path = "${os_account_path}/frameworks/appaccount/core"
app_account_interfaces_native_path =
    "${os_account_path}/interfaces/innerkits/appaccount/native"
app_account_innerkits_native_path =
    "${os_account_path}/frameworks/appaccount/native"
app_account_services_path = "${os_account_path}/services/accountmgr"
app_account_kits_path = "${os_account_path}/interfaces/kits/napi/appaccount"

os_account_interfaces_native_path =
    "${os_account_path}/interfaces/innerkits/osaccount/native"
os_account_innerkits_native_path =
    "${os_account_path}/frameworks/osaccount/native"
os_account_core_path = "${os_account_path}/frameworks/osaccount/core"
os_account_kits_path = "${os_account_path}/interfaces/kits/napi/osaccount"

aafwk_path = "//foundation/aafwk/standard"
appexecfwk_path = "//foundation/appexecfwk/standard"
