# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

os_account_path = "//base/account/os_account"
ability_runtime_path = "//foundation/ability/ability_runtime"
ability_runtime_napi_path = "${ability_runtime_path}/frameworks/js/napi"
bundle_framework_path = "//foundation/bundlemanager/bundle_framework"
common_path = "${os_account_path}/frameworks/common"
services_path = "${os_account_path}/services"
tools_path = "${os_account_path}/tools"
innerkits_path = "${os_account_path}/interfaces/innerkits/ohosaccount/native"
innerkits_native_path = "${os_account_path}/frameworks/ohosaccount/native"

app_account_core_path = "${os_account_path}/frameworks/appaccount/core"
app_account_interfaces_native_path =
    "${os_account_path}/interfaces/innerkits/appaccount/native"
app_account_innerkits_native_path =
    "${os_account_path}/frameworks/appaccount/native"
app_account_services_path = "${os_account_path}/services/accountmgr"
app_account_kits_path = "${os_account_path}/interfaces/kits/napi/appaccount"

os_account_interfaces_native_path =
    "${os_account_path}/interfaces/innerkits/osaccount/native"
os_account_innerkits_native_path =
    "${os_account_path}/frameworks/osaccount/native"
os_account_core_path = "${os_account_path}/frameworks/osaccount/core"
os_account_kits_path = "${os_account_path}/interfaces/kits/napi/osaccount"
os_account_dfx_path = "${os_account_path}/dfx"

account_iam_kits_path = "${os_account_path}/interfaces/kits/napi/account_iam"
account_iam_interfaces_native_path =
    "${os_account_path}/interfaces/innerkits/account_iam/native"
account_iam_framework_path = "${os_account_path}/frameworks/account_iam"

domain_account_napi_path =
    "${os_account_path}/interfaces/kits/napi/domain_account"
domain_account_interfaces_native_path =
    "${os_account_path}/interfaces/innerkits/domain_account/native"
domain_account_framework_path = "${os_account_path}/frameworks/domain_account"

account_coverage_config_path = "${os_account_path}/config"

if (!defined(global_parts_info) ||
    defined(global_parts_info.useriam_user_auth_framework)) {
  has_user_auth_part = true
  has_user_idm_part = true
} else {
  has_user_auth_part = false
  has_user_idm_part = false
}

if (!defined(global_parts_info) ||
    defined(global_parts_info.useriam_pin_auth)) {
  has_pin_auth_part = true
} else {
  has_pin_auth_part = false
}

if (!defined(global_parts_info) ||
    defined(global_parts_info.notification_common_event_service)) {
  has_ces_part = true
} else {
  has_ces_part = false
}

if (!defined(global_parts_info) ||
    defined(global_parts_info.hiviewdfx_hisysevent_native)) {
  has_hiviewdfx_hisysevent_part = true
} else {
  has_hiviewdfx_hisysevent_part = false
}

if (!defined(global_parts_info) ||
    defined(global_parts_info.hiviewdfx_hitrace_native)) {
  has_hiviewdfx_hitrace_part = true
} else {
  has_hiviewdfx_hitrace_part = false
}

if (!defined(global_parts_info) ||
    defined(global_parts_info.filemanagement_storage_service)) {
  has_storage_service_part = true
} else {
  has_storage_service_part = false
}

declare_args() {
  os_account_multiple_active_accounts = false
}

declare_args() {
  os_account_distributed_feature = true
}

declare_args() {
  os_account_storage_feature  = true
}

declare_args() {
  os_account_test_case_coverage_feature = false
}
